--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "nodenext",
     "esModuleInterop": true,
     "outDir": "dist",
-    "target": "es6",
+    "target": "es2022",
     "strict": true
   },
   "include": [
